force-app/main/default/objects/Order/fields/Against_Order__c.field-meta.xml
<CustomField>
    <fullName>Against_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Against Order</label>
    <type>Checkbox</type>
</CustomField>