force-app/main/default/objects/Order/fields/Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Name__c</fullName>
    <label>Contact Person Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>