force-app/main/default/objects/Order/fields/Delivery_Committed_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Committed_Date__c</fullName>
    <label>Delivery Committed Date</label>
    <type>Date</type>
</CustomField>