force-app/main/default/objects/Order/fields/Opp_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>Opp_AddressLine1__c</fullName>
    <formula>Opportunity.AddressLine1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddressLine1</label>
    <type>Text</type>
</CustomField>