force-app/main/default/objects/Order/fields/Opp_Country__c.field-meta.xml
<CustomField>
    <fullName>Opp_Country__c</fullName>
    <formula>TEXT(Opportunity.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>