force-app/main/default/objects/Order/fields/Opp_State__c.field-meta.xml
<CustomField>
    <fullName>Opp_State__c</fullName>
    <formula>TEXT(Opportunity.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>