force-app/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Sales_Order_Number__c)</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>