force-app/main/default/objects/Order/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>