force-app/main/default/objects/Order/fields/Payment_methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_methods__c</fullName>
    <label>Payment methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash at Site</fullName>
            </value>
            <value>
                <fullName>Cheque at Site</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>