force-app/main/default/objects/Order/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <formula>Quote.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>phone</label>
    <type>Text</type>
</CustomField>