force-app/main/default/objects/Order/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>150</length>
    <type>Text</type>
</CustomField>