force-app/main/default/objects/Order/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <formula>Quote.Quote_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>