force-app/main/default/objects/Order/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <displayFormat>MG-SO-2026-{000000}</displayFormat>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>