force-app/main/default/objects/Order/fields/SAP_Doc_Num__c.field-meta.xml
<CustomField>
    <fullName>SAP_Doc_Num__c</fullName>
    <label>SAP Doc Num</label>
    <length>150</length>
    <type>Text</type>
</CustomField>