force-app/main/default/objects/Order/fields/Standard_Quote__c.field-meta.xml
<CustomField>
    <fullName>Standard_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>