force-app/main/default/objects/Order/fields/Total_Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivered_Quantity__c</fullName>
    <label>Total Delivered Quantity</label>
    <summarizedField>OrderItem.Delivered_Quantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>