force-app/main/default/objects/Order/fields/Total_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered_Quantity__c</fullName>
    <label>Total Ordered Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>