force-app/main/default/objects/Order/fields/Total_Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Quantity__c</fullName>
    <formula>/* Total Pending = Total Ordered - Total Delivered (treat null as zero) */
( (Total_Ordered_Quantity__c  ) - (Total_Delivered_Quantity__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pending Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>