force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>Order_Number__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Contact_Person_Number__c</columns>
    <columns>Pending_Quantity__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Delivered_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>All Activated Orders</label>
</ListView>